cluster-app/manifest/drone/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: pipeline
  labels:
    app: drone
spec:
  selector:
    app: drone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
