cluster-app/manifest/drone/03-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: drone
  namespace: pipeline
spec:
  entryPoints:
  - https
  routes:
  - kind: Rule
    match: Host(`ci.${root_host}`)
    services:
    - name: drone
      port: 80
  tls:
    certResolver: default
    domains:
    - main: ${root_host}
      sans:
      - '*.${root_host}'
